tests/ui/abi3_nativetype_inheritance.stderr
error[E0277]: the trait bound `PyDict: PyClass` is not satisfied
   --> tests/ui/abi3_nativetype_inheritance.rs:5:1
    |
5   | #[pyclass(extends=PyDict)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyDict`
    |
   ::: src/class/impl_.rs:755:1
    |
755 | pub trait PyClassBaseType: Sized {
    | -------------------------------- required by this bound in `PyClassBaseType`
    |
    = note: required because of the requirements on the impl of `PyClassBaseType` for `PyDict`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PyDict: PyClass` is not satisfied
   --> tests/ui/abi3_nativetype_inheritance.rs:5:1
    |
5   | #[pyclass(extends=PyDict)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyDict`
    |
   ::: src/class/impl_.rs:742:47
    |
742 | pub struct ThreadCheckerInherited<T: Send, U: PyClassBaseType>(PhantomData<T>, U::ThreadChecker);
    |                                               --------------- required by this bound in `ThreadCheckerInherited`
    |
    = note: required because of the requirements on the impl of `PyClassBaseType` for `PyDict`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
